
option java_outer_classname="RemoveGroupProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message RemoveGroup {
}